vpc.tf

# # Create a VPC
# resource "aws_vpc" "terraform-vpc" {
#   cidr_block = var.vpc_cidr_block

#   tags = {
#     Name = var.vpc_name
#   }
# }
# resource "aws_internet_gateway" "gw" {
#   vpc_id = aws_vpc.terraform-vpc.id

#   tags = {
#     Name = var.internet_gateway_name
#   }
# }
